# zip_constractor

./: CMakeLists.txt
libzip/include/: zip.h  zipconf.h
libzip/lib/: libzip.so.5.5
libzip/lib/cmake/libzip/: libzip-config-version.cmake  libzip-config.cmake
src/: domain.h  json_reader.cpp  json_reader.h  main.cpp  zip_builder.cpp  zip_builder.h
